# dailyheavens

./: .env  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README-INTEGRATION.md  README.md  astrology.py  birth_chart_raw.json  birth_chart_response.json  conda-requirements.txt  docker-compose.yml  e2e_interpretation_output.md  final_interpretation.md  frontend_response.json  heavens-app.py  interpretation_payload.json  interpretation_response.json  june20_original.md  overall_interpretation.md  overall_interpretation_review.md  pip-requirements.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  response.json  test.py  test_flatlib.py  test_integration.sh  test_new_api.sh  test_output.md  test_service.py  updated_interpretation_review.md  vercel.json
api/: index.py  requirements.txt  test_api.py  vercel.json
app/: birth_chart_server.py  interpretation_server.py  main.py  models.py
app/api/: birth_chart.py  endpoints.py
app/api/v1/: api.py
app/api/v1/endpoints/: birthchart.py  interpretation.py
app/core/: config.py  logging.py
app/models/: astrology.py  birth_chart.py  interpretation.py
app/services/: astrology.py  birth_chart.py  chart_statistics.py  email.py  interpretation.py  pdf.py
app/templates/: overall_interpretation.txt.j2  planet_interpretation.txt.j2
dailyheavens-frontend/: README.md  birth_chart_data.json  check-env.js  formatted_birth_chart.json  interpretation_response_sample.json  interpretation_test_response.json  next.config.ts  package.json  pnpm-lock.yaml  requirements.txt  response.json  tailwind.config.js  tailwind.config.ts  vercel.json
dailyheavens-frontend/api/birth-chart/: birth_chart.py  index.py  route.py
dailyheavens-frontend/api/data/structured/: chart_shapes.json  combinations.json  dignities.json  planets.json  (+5 more)
dailyheavens-frontend/api/hello/: index.py
dailyheavens-frontend/api/interpretation/: birth_chart_data.json  index.py  interpretation.py  route.py
dailyheavens-frontend/api/templates/: overall_interpretation.txt.j2
dailyheavens-frontend/api/utils/: vercel_adapter.py
dailyheavens-frontend/app/: globals.css  layout.tsx  page.tsx
dailyheavens-frontend/app/dashboard/: page.tsx
dailyheavens-frontend/app/profile/: page.tsx
dailyheavens-frontend/components/: element-modality-charts.tsx  house-card.tsx  planet-card.tsx
dailyheavens-frontend/components/layout/: nav.tsx
dailyheavens-frontend/components/ui/: planet-icons.ts  tabs.tsx
dailyheavens-frontend/lib/: astrological-symbols.ts
data/: planet_qualities.json
data/structured/: aspects.json  astrological_techniques.json  combinations.json  descriptions.json  dignities.json  house_systems.json  houses.json  interpretation_combinations.json  interpretation_patterns.json  interpretation_templates.json  planetary_dignities.json  planets.json  signs.json  techniques.json  templates.json
docs/: api.md  flatlib_usage.md  troubleshooting.md
integration/: README.md  birth_chart_adapter.py  test_integration.sh  vercel.json
templates/: chart_template.html
tests/: README.md  conftest.py  run_tests.sh  test_api_responses.py  test_birth_chart.py  test_comprehensive.py  test_data_generator.py  test_data_mapping.py  test_environment.py  test_integration.py  test_interpretation.py  test_interpretation_service.py  test_logging.py  test_performance.py
(+3 files in other folders)
