[tool.poetry]
name = "astrological-service"
version = "0.1.0"
description = "Modern astrological service for generating horoscopes and astrological reports"
authors = ["Will Pettengill"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
flatlib = "^0.2.1"
uszipcode = "^1.0.1"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
weasyprint = "^60.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
emails = "^0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
